// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`terminals-list-core displays an error state on failed data fetch 1`] = `
<terminals-list-core>
  <div>
    <div class="table-wrapper">
      <table class="table table-hover">
        <thead class="sticky-top table-head" part="table-head">
          <tr class="table-light text-nowrap" part="table-head-row">
            <th part="table-head-cell" scope="col" title="The nickname associated with the terminal">
              Nickname
            </th>
            <th part="table-head-cell" scope="col" title="The provider ID of the terminal">
              Provider ID
            </th>
            <th part="table-head-cell" scope="col" title="The current status of each terminal">
              Status
            </th>
          </tr>
        </thead>
        <tbody class="table-body" part="table-body">
          <tr>
            <td class="error-state" colspan="3" data-test-id="table-error-state" part="error-state" style="text-align: center;">
              An unexpected error occurred: Fetch error
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="3" part="pagination-bar">
              <pagination-menu>
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination" part="pagination">
                    <li class="disabled page-item" part="page-item">
                      <a class="page-link" href="#" part="page-link page-link-disabled">
                        <span class="me-1" part="page-link-arrow">
                          «
                        </span>
                        <span part="page-button-text">
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="page-link page-link-disabled">
                        <span part="page-link-text">
                          Next
                        </span>
                        <span class="ms-1" part="page-link-arrow">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</terminals-list-core>
`;

exports[`terminals-list-core renders properly with fetched data 1`] = `
<terminals-list-core>
  <div>
    <div class="table-wrapper">
      <table class="table table-hover">
        <thead class="sticky-top table-head" part="table-head">
          <tr class="table-light text-nowrap" part="table-head-row">
            <th part="table-head-cell" scope="col" title="The nickname associated with the terminal">
              Nickname
            </th>
            <th part="table-head-cell" scope="col" title="The provider ID of the terminal">
              Provider ID
            </th>
            <th part="table-head-cell" scope="col" title="The current status of each terminal">
              Status
            </th>
          </tr>
        </thead>
        <tbody class="table-body" part="table-body">
          <tr data-row-entity-id="trm_43Y2lE9E2ULR8pvaKI6D5v" data-test-id="table-row" part="table-row table-row-odd">
            <td part="table-cell">
              Terminal 1
            </td>
            <td part="table-cell">
              453-760-515
            </td>
            <td part="table-cell">
              <span class="badge bg-danger" title="This terminal is disconnected.">
                Disconnected
              </span>
            </td>
          </tr>
          <tr data-row-entity-id="trm_6TFOXK5U0LZLyQ6y6t3sbj" data-test-id="table-row" part="table-row table-row-even">
            <td part="table-cell">
              Terminal 2
            </td>
            <td part="table-cell">
              807-075-625
            </td>
            <td part="table-cell">
              <span class="badge bg-danger" title="This terminal is disconnected.">
                Disconnected
              </span>
            </td>
          </tr>
          <tr data-row-entity-id="trm_F8UyFyXcaTBwSDh1cMxjc" data-test-id="table-row" part="table-row table-row-odd">
            <td part="table-cell">
              Terminal 3
            </td>
            <td part="table-cell">
              450-060-752
            </td>
            <td part="table-cell">
              <span class="badge bg-success" title="This terminal is connected.">
                Connected
              </span>
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="3" part="pagination-bar">
              <pagination-menu>
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination" part="pagination">
                    <li class="disabled page-item" part="page-item">
                      <a class="page-link" href="#" part="page-link page-link-disabled">
                        <span class="me-1" part="page-link-arrow">
                          «
                        </span>
                        <span part="page-button-text">
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="page-link page-link-disabled">
                        <span part="page-link-text">
                          Next
                        </span>
                        <span class="ms-1" part="page-link-arrow">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</terminals-list-core>
`;
